--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ py-cpuinfo==9.0.0
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+Python == 3.12.4
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
@@ -72,3 +73,5 @@ urllib3==2.2.1
 Werkzeug==3.0.2
 wheel==0.43.0
 wrapt==1.16.0
+gunicorn
+
