--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ ml-dtypes==0.3.2
 mpmath==1.3.0
 namex==0.0.8
 networkx==3.3
-numpy==1.26.4
+numpy>=1.26.0,<2.0.0
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
 opt-einsum==3.3.0
@@ -47,14 +47,13 @@ py-cpuinfo==9.0.0
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-Python == 3.12.4
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.1
 scipy==1.13.0
 seaborn==0.13.2
-setuptools==69.5.1
+setuptools>=69.5.1,<70.0.0
 six==1.16.0
 sympy==1.12
 tensorboard==2.16.2
@@ -74,4 +73,3 @@ Werkzeug==3.0.2
 wheel==0.43.0
 wrapt==1.16.0
 gunicorn
-
