--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy==2.1.2
-protobuf==5.28.2
-six==1.16.0
-tensorflow @ https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.0.0-py3-none-any.whl#sha256=5625a11f61a576d12161c5c7488eef7fa03b72508968624610e4667fea82defa
-wheel==0.44.0
-Flask
+Flask==2.2.2               # Flask web framework
+Flask-CORS==3.0.10         # For Cross-Origin Resource Sharing
+Pillow==9.3.0              # Image processing library
+ultralytics==8.0.51        # YOLOv8 model for object detection and classification
+numpy==1.24.3              # Ensure you have a compatible version of numpy
+protobuf==5.28.2           # For serializing structured data
+setuptools==75.2.0         # Python package installation
+six==1.16.0                # Utility for compatibility between Python 2 and 3
+wheel==0.44.0              # Built-package format
