--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.3
-Flask_Cors==5.0.0
-Pillow==11.0.0
-ultralytics==8.3.17
+Flask>=3.0.3,<3.1
+Flask_Cors>=5.0.0,<5.1
+Pillow>=11.0.0,<11.1
+ultralytics>=8.3.17,<8.4 --no-deps
+
