--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,96 @@
-Flask>=3.0.3,<3.1
-Flask_Cors>=5.0.0,<5.1
-Pillow>=11.0.0,<11.1
-ultralytics>=8.3.17,<8.4 
-torch-cpu==2.5.0
-
+asttokens==2.4.1
+attrs==24.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.3.0
+cycler==0.12.1
+decorator==5.1.1
+defusedxml==0.7.1
+docopt==0.6.2
+executing==2.1.0
+fastjsonschema==2.20.0
+filelock==3.16.1
+Flask==3.0.3
+Flask-Cors==5.0.0
+flatbuffers==24.3.25
+fonttools==4.54.1
+fsspec==2024.9.0
+huggingface-hub==0.26.0
+humanfriendly==10.0
+idna==3.10
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.7
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mistune==3.0.2
+mpmath==1.3.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+networkx==3.4.1
+numpy==2.1.2
+onnxruntime==1.19.2
+#opencv-python==4.10.0.84
+opencv-python-headless=4.10.0.84
+packaging==24.1
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pickleshare==0.7.5
+pillow==11.0.0
+pipreqs==0.5.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+protobuf==5.28.2
+psutil==6.1.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+Pygments==2.18.0
+pyparsing==3.2.0
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+pytz==2024.2
+pywin32==308
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.20.0
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==75.2.0
+six==1.16.0
+soupsieve==2.6
+stack-data==0.6.3
+sympy==1.13.1
+tinycss2==1.3.0
+torch==2.5.0
+torchvision==0.20.0
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.2
+ultralytics==8.3.18
+ultralytics-thop==2.0.9
+urllib3==2.2.3
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.0.4
+yarg==0.1.9
