--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==3.0.3
 Flask-Cors==5.0.0
-torch==1.8.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
-torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+--extra-index-url https://download.pytorch.org/whl/cpu
 ultralytics
 Pillow==11.0.0
 numpy==2.1.2
