--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-Cors==5.0.0
 --extra-index-url https://download.pytorch.org/whl/cpu
 ultralytics
 Pillow==11.0.0
-numpy==2.1.2
+numpy
 opencv-python-headless==4.10.0.84
 requests==2.32.3
 
