--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.3
 Flask-Cors==5.0.0
+opencv-python-headless
 --extra-index-url https://download.pytorch.org/whl/cpu
 ultralytics
 Pillow==11.0.0
-requests==2.32.3
 
