--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.3
 Flask-Cors==5.0.0
 opencv-python-headless
+opencv-contrib-python
 --extra-index-url https://download.pytorch.org/whl/cpu
 ultralytics
 Pillow==11.0.0
